--- a/config.jsonc
+++ b/config.jsonc
@@ -50,9 +50,11 @@
         },
 "river/tags": {
     "num-tags": 9,
-    "tag-labels": [ "", "", "", "", "", "", "", "", "" ],
+    "tag-labels": [ "", "", "", "", "", "", "", "", "" ]
 },
-
+"river/window": {
+    "max-length": 80
+},
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
